# sui-stats

./: Cargo.toml  README.md
migrations/2025-03-19-092321_sizes/: down.sql  up.sql
migrations/2025-06-03-135647_add_unique_stats/: down.sql  up.sql
migrations/2025-06-03-160816_add_granular_size_tables/: down.sql  up.sql
migrations/2025-06-03-171517_modify_object_sizes_add_version/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
