[package]
name = "sui-sizes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.61"
bcs = "0.1.4"
clap = { version = "4.4", features = ["derive"] }
diesel = "2.2"
diesel_migrations = "2.2"
diesel-async = "0.5"
tokio = "1.36.0"
url = "2.3.1"

sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", rev = "6f4ef4f6fa06dfc8ea584fe88a5733042866d3bf" }
